--- a/Tp3Atc2-1/nbproject/project.properties
+++ b/Tp3Atc2-1/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Tp2-lab3.jar
+dist.jar=${dist.dir}/Tp3Atc2-1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Tp2-lab3
+dist.jlink.output=${dist.jlink.dir}/Tp3Atc2-1
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Tp2-lab3
-main.class=principal.Principal
+jlink.launcher.name=Tp3Atc2-1
+main.class=tp3atc2.Tp3Atc2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
